--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,20 @@ build/CMakeFiles/SnakeGame.dir/src/game.cpp.o
 build/CMakeFiles/SnakeGame.dir/src/main.cpp.o
 build/CMakeFiles/SnakeGame.dir/src/renderer.cpp.o
 build/CMakeFiles/SnakeGame.dir/src/snake.cpp.o
+build/CMakeFiles/CMakeError.log
+build/CMakeFiles/3.24.2/CMakeCCompiler.cmake
+build/CMakeFiles/3.24.2/CMakeCXXCompiler.cmake
+build/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_C.bin
+build/CMakeFiles/3.24.2/CMakeDetermineCompilerABI_CXX.bin
+build/CMakeFiles/3.24.2/CMakeSystem.cmake
+build/CMakeFiles/3.24.2/CompilerIdC/CMakeCCompilerId.c
+build/CMakeFiles/3.24.2/CompilerIdC/CMakeCCompilerId.o
+build/CMakeFiles/3.24.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+build/CMakeFiles/3.24.2/CompilerIdCXX/CMakeCXXCompilerId.o
+build/CMakeFiles/SnakeGame.dir/compiler_depend.make
+build/CMakeFiles/SnakeGame.dir/compiler_depend.ts
+build/CMakeFiles/SnakeGame.dir/src/controller.cpp.o.d
+build/CMakeFiles/SnakeGame.dir/src/game.cpp.o.d
+build/CMakeFiles/SnakeGame.dir/src/main.cpp.o.d
+build/CMakeFiles/SnakeGame.dir/src/renderer.cpp.o.d
+build/CMakeFiles/SnakeGame.dir/src/snake.cpp.o.d
